--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -1,1 +1,30 @@
-{"dependencies": {}, "locked": {}}
+{
+  "dependencies": {
+    "nadena.dev.modular-avatar": {
+      "version": "1.12.5"
+    }
+  },
+  "locked": {
+    "nadena.dev.modular-avatar": {
+      "version": "1.12.5",
+      "dependencies": {
+        "com.vrchat.avatars": ">=3.7.4",
+        "nadena.dev.ndmf": ">=1.7.7 <2.0.0-a"
+      }
+    },
+    "com.vrchat.avatars": {
+      "version": "3.8.0",
+      "dependencies": {
+        "com.vrchat.base": "3.8.0"
+      }
+    },
+    "com.vrchat.base": {
+      "version": "3.8.0",
+      "dependencies": {}
+    },
+    "nadena.dev.ndmf": {
+      "version": "1.7.8",
+      "dependencies": {}
+    }
+  }
+}
