--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "nadena.dev.modular-avatar": {
       "version": "1.12.5"
+    },
+    "jp.lilxyzw.liltoon": {
+      "version": "1.9.0"
     }
   },
   "locked": {
@@ -24,6 +27,10 @@
     },
     "nadena.dev.ndmf": {
       "version": "1.7.8",
+      "dependencies": {}
+    },
+    "jp.lilxyzw.liltoon": {
+      "version": "1.9.0",
       "dependencies": {}
     }
   }
