--- a/Packages/com.hhotatea.avatar-pose-library/Editor/com.hhotatea.avatar-pose-library.Editor.asmdef
+++ b/Packages/com.hhotatea.avatar-pose-library/Editor/com.hhotatea.avatar-pose-library.Editor.asmdef
@@ -2,22 +2,24 @@
     "name": "com.hhotatea.avatar-pose-library.Editor",
     "rootNamespace": "",
     "references": [
+        "com.hhotatea.avatar-pose-library.Runtime",
         "VRC.SDK3A",
-        "VRC.SDK3A.Editor",
         "VRC.SDKBase",
-        "VRC.SDKBase.Editor",
-        "com.hhotatea.avatar-pose-library",
         "nadena.dev.ndmf",
         "nadena.dev.ndmf.runtime",
-        "nadena.dev.modular-avatar.core",
-        "nadena.dev.modular-avatar.core.editor"
+        "nadena.dev.modular-avatar.core"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "VRCSDKBase.dll",
+        "VRCSDK3A.dll"
+    ],
+    "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
